#327 Fix margin on mobile

--- a/packages/web/src/components/spa/HackAUBG/AwardsSection/awards_section.css
+++ b/packages/web/src/components/spa/HackAUBG/AwardsSection/awards_section.css
@@ -81,7 +81,8 @@
     }
 
     #awards-info-text {
-        margin: 15% 11% 20% 11%;
+        margin-top: 15%;
+        margin-bottom: 20%;
         font-size: small;
     }
 
