--- a/packages/web/src/components/spa/HackAUBG/ScheduleSection/schedule_section.css
+++ b/packages/web/src/components/spa/HackAUBG/ScheduleSection/schedule_section.css
@@ -76,4 +76,9 @@
     .schedule-event-title-hack-aubg {
         font-size: 3.5vw;
     }
+
+    .schedule-section-container-hack-aubg {
+        padding-left: 11%;
+        padding-right: 11%;
+    }
 }
